Add CommunityController and related entities for community features