@@ -1,9 +1,11 @@
 package org.example.ewastev0_1.services.Impl;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.ewastev0_1.domain.entites.ActionHistorique;
 import org.example.ewastev0_1.domain.entites.Ewaste;
+import org.example.ewastev0_1.domain.entites.User;
 import org.example.ewastev0_1.domain.entites.UserPoints;
 import org.example.ewastev0_1.dto.request.EwasteRequest;
 import org.example.ewastev0_1.dto.response.EwasteResponse;
@@ -12,14 +14,17 @@ import org.example.ewastev0_1.mapper.EwasteMapper;
 import org.example.ewastev0_1.repository.ActionHistoriqueRepository;
 import org.example.ewastev0_1.repository.EwasteRepository;
 import org.example.ewastev0_1.repository.UserPointsRepository;
+import org.example.ewastev0_1.repository.UserRepository;
 import org.example.ewastev0_1.services.Interface.AnnonceService;
 import org.example.ewastev0_1.services.Interface.EwasteService;
+import org.example.ewastev0_1.services.Interface.NotificationService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
@@ -30,17 +35,38 @@ public class EwasteServiceImpl implements EwasteService {
     private final EwasteRepository ewasteRepository;
     private final UserPointsRepository userPointsRepository;
     private final ActionHistoriqueRepository actionHistoriqueRepository;
-
+    private final NotificationService notificationService;
+private final UserRepository userRepository;
     @Override
     public EwasteResponse createEwaste(EwasteRequest request) {
         log.info("Creating new e-waste with details: {}", request);
+
+
+        Integer userId = request.getUser_id();
+        log.info("user _id" ,userId);
+        if (userId == null) {
+            throw new IllegalArgumentException("User ID cannot be null");
+        }
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userId));
+
         Ewaste ewaste = ewasteMapper.toEntity(request);
+
+
+        ewaste.setUser(user);
+
+
         Ewaste savedEwaste = ewasteRepository.save(ewaste);
 
+        log.info("E-waste created successfully with ID: {}", savedEwaste.getId());
+        notificationService.createNotification(
+                savedEwaste.getUser().getId(),
+                "Your e-waste has been successfully registered."
+        );
 
         calculateAndAssignPoints(savedEwaste.getUser().getId(), "RECYCLE", savedEwaste.getId());
 
-        log.info("E-waste created successfully with ID: {}", savedEwaste.getId());
         return ewasteMapper.toResponse(savedEwaste);
     }
 
@@ -124,7 +150,7 @@ public class EwasteServiceImpl implements EwasteService {
         log.info("Retrieved {} e-wastes", ewastes.size());
         return ewastes.stream()
                 .map(ewasteMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -161,7 +187,7 @@ public class EwasteServiceImpl implements EwasteService {
 //                    return new ResourceNotFoundException("E-waste not found with ID: " + id);
 //                });
 //
-//        // Assuming statusRequest contains only the status field to update
+//
 //        ewasteMapper.updateEntity(ewaste, statusRequest);
 //        Ewaste updatedEwaste = ewasteRepository.save(ewaste);
 //        log.info("E-waste status updated successfully for ID: {}", id);
